[package]
name = "nginx"
version = "0.6.1"
authors = ["Navid <yaa110@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["nginx"]
repository = "https://github.com/arvancloud/nginx-rs"
homepage = "https://github.com/arvancloud/nginx-rs"
documentation = "https://docs.rs/nginx"
description = "Rust bindings for NGINX API"
categories = ["api-bindings", "external-ffi-bindings"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[badges]
travis-ci = { repository = "arvancloud/nginx-rs" }

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.53"
